--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#ff490c">
 	<meta name="keywords" content="физика, классическая, квантовая">
 	<meta name="description" content="Сравнение классической и квантовой физики на опыте.">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'none'">
 	<title>Clatum – классическая физика или квантовая?</title>
 	<link rel="icon" href="./img/favicon.svg" sizes="any" type="image/svg+xml">
 	<link rel="stylesheet" href="./css/main.css">
@@ -20,7 +21,7 @@
 			<header class="page-header">
 				<div class="page-header__container container">
 					<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%82_%D0%A8%D1%80%D1%91%D0%B4%D0%B8%D0%BD%D0%B3%D0%B5%D1%80%D0%B0"
-						class="page-header__cat uppercase target">кот шредингера</a>
+						class="page-header__cat uppercase target" rel="noopener">кот шредингера</a>
 
 					<img class="page-header__logo" src="./img/site-logo.svg" alt="логотип сайта">
 
@@ -184,7 +185,9 @@
 							</svg>
 						</div>
 
-						<input class="page-expert-opinion__volume-track" type="range" min="0" max="100" step="1" value="50">
+						<input class="page-expert-opinion__volume-track" id="volume-track" type="range" min="0" max="100"
+							step="1" value="50">
+						<label for="volume-track"></label>
 					</div>
 				</div>
 			</section>
@@ -240,7 +243,8 @@
 
 				<div class="page-footer__bottom">
 					<div class="page-footer__icons">
-						<a href="https://vk.com/alcesthub" class="page-footer__link-svg target" aria-label="vkontakte">
+						<a href="https://vk.com/alcesthub" class="page-footer__link-svg target" aria-label="vkontakte"
+							rel="noopener">
 							<svg class="page-footer__icon" width="48" height="48" viewBox="0 0 48 48" fill="none">
 								<path fill-rule="evenodd" clip-rule="evenodd"
 									d="M3.37413 3.37413C0 6.74826 0 12.1788 0 23.04V24.96C0 35.8212 0 41.2517 3.37413 44.6259C6.74826 48 12.1788 48 23.04 48H24.96C35.8212 48 41.2517 48 44.6259 44.6259C48 41.2517 48 35.8212 48 24.96V23.04C48 12.1788 48 6.74826 44.6259 3.37413C41.2517 0 35.8212 0 24.96 0H23.04C12.1788 0 6.74826 0 3.37413 3.37413ZM8.10012 14.6001C8.36012 27.0801 14.6001 34.5801 25.5401 34.5801H26.1602V27.4401C30.1802 27.8401 33.22 30.7801 34.44 34.5801H40.1201C38.5601 28.9001 34.4599 25.7601 31.8999 24.5601C34.4599 23.0801 38.0599 19.4801 38.9199 14.6001H33.7598C32.6398 18.5601 29.3202 22.1601 26.1602 22.5001V14.6001H21V28.4401C17.8 27.6401 13.7601 23.7601 13.5801 14.6001H8.10012Z"
@@ -248,14 +252,16 @@
 							</svg>
 						</a>
 
-						<a href="https://t.me/AlcestHub" class="page-footer__link-svg target" aria-label="telegram">
+						<a href="https://t.me/AlcestHub" class="page-footer__link-svg target" aria-label="telegram"
+							rel="noopener">
 							<svg class="page-footer__icon" viewBox="0 0 496 512">
 								<path fill="#fff"
 									d="M248 8a248 248 0 1 0 248 248C496 119.9 384.1 8 248 8zm114.1 168.7c-3.7 39.2-19.9 134.4-28.1 178.3-3.5 18.6-10.3 24.8-17 25.4-14.3 1.3-25.3-9.5-39.2-18.6-21.9-14.4-34.2-23.3-55.4-37.2-24.5-16.2-8.6-25 5.4-39.5 3.6-3.8 67-61.5 68.3-66.8.1-.6.3-3-1.2-4.4s-3.6-.8-5.1-.5q-3.3.8-104.6 69.2-14.9 10.2-26.9 10c-8.9-.3-25.9-5-38.5-9.2-15.6-5-28-7.7-26.8-16.3q.8-6.7 18.4-13.7 108.4-47.2 144.6-62.3c68.9-28.6 83.2-33.6 92.5-33.8 2 0 6.7.5 9.6 2.9a10.4 10.4 0 0 1 3.6 6.7 43.8 43.8 0 0 1 .4 9.8z" />
 							</svg>
 						</a>
 
-						<a href="https://github.com/AlcestHub" class="page-footer__link-svg target" aria-label="github">
+						<a href="https://github.com/AlcestHub" class="page-footer__link-svg target" aria-label="github"
+							rel="noopener">
 							<svg class="page-footer__icon" viewBox="0 0 496 512">
 								<path fill="#fff"
 									d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252a250.7 250.7 0 0 0 169.5 239.2c12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9a94.5 94.5 0 0 1 2.6-67.9c20.9-6.5 69 27 69 27a235 235 0 0 1 125.6 0s48.1-33.6 69-27a94.4 94.4 0 0 1 2.6 67.9c16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
